# gen/js/chromestatus-openapi/src/models/index.ts
@@ -3,10 +3,13 @@
 export * from './ComponentUsersRequest';
 export * from './ComponentsUser';
 export * from './ComponentsUsersResponse';
+export * from './DismissCueRequest';
+export * from './ErrorMessage';
 export * from './ExternalReviewsResponse';
 export * from './FeatureLatency';
 export * from './FeatureLink';
 export * from './GateLatency';
+export * from './GetDismissedCues400Response';
 export * from './GetIntentResponse';
 export * from './LinkPreview';
 export * from './LinkPreviewBase';
@@ -28,3 +31,4 @@ export * from './OwnersAndSubscribersOfComponent';
 export * from './PostIntentRequest';
 export * from './ReviewLatency';
 export * from './SpecMentor';
+export * from './SuccessMessage';
